# eri-bot

./: .gitignore  App.example.toml  Cargo.toml  Dockerfile  README.md  build.rs  docker-compose.yml
src/: config.rs  constants.rs  main.rs
src/commands/: cleaner.rs  debug.rs  mod.rs  verify.rs
