[package]
name = "eri-bot"
version = "0.1.0"
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
poise = "0.5.5"
config = { version = "0.13.3", features = ["toml"] }
serde = "1"
tokio = { version = "1.30.0", features = ["full"] }
log = "0.4"
fast_log = { version = "1.6" }
chrono = { version = "0.4", features = ["serde"] }
lazy_static = "1.4.0"
toml_edit = "0.19.14"

[dependencies.uuid]
version = "1.4.1"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]